force-app/main/default/objects/Reader__c/Reader__c.object-meta.xml
<CustomObject>
    <description>A person who takes the book from library</description>
    <label>Reader</label>
    <nameField>
        <label>Reader Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Readers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>