force-app/main/default/objects/Reader__c/fields/NumberOfHoldBooks__c.field-meta.xml
<CustomField>
    <fullName>NumberOfHoldBooks__c</fullName>
    <description>Number of books, Reader has currently taken home</description>
    <label>Number Of Hold Books</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>