force-app/main/default/objects/Reader__c/fields/SubscriptionType__c.field-meta.xml
<CustomField>
    <fullName>SubscriptionType__c</fullName>
    <label>Subscription Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>one-time</fullName>
            </value>
            <value>
                <fullName>month</fullName>
            </value>
            <value>
                <fullName>year</fullName>
            </value>
            <value>
                <fullName>VIP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>