force-app/main/default/objects/Reader__c/recordTypes/Home_Reader.recordType-meta.xml
<RecordType>
    <fullName>Home_Reader</fullName>
    <active>true</active>
    <description>Home reader.</description>
    <label>Home Reader</label>
</RecordType>